--- a/samples/public/BlankIOS/BlankIOS.csproj
+++ b/samples/public/BlankIOS/BlankIOS.csproj
@@ -1,15 +1,56 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net11.0-ios</TargetFramework>
+    <TargetFramework>net10.0-ios</TargetFramework>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>true</ImplicitUsings>
-    <SupportedOSPlatformVersion>13.0</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion>15.0</SupportedOSPlatformVersion>
 
     <!--
       Enable full trimming in Release mode.
       To learn more, see: https://learn.microsoft.com/dotnet/core/deploying/trimming/trimming-options#trimming-granularity
     -->
     <TrimMode Condition="'$(Configuration)' == 'Release'">full</TrimMode>
+    
+    <!-- Mark as a test project - this enables all testing infrastructure -->
+    <IsTestProject>true</IsTestProject>
+    
+    <!-- 
+      Enable Microsoft Testing Platform for source generation.
+      Note: IsTestingPlatformApplication is set to false in Directory.Build.props to prevent
+      MTP from trying to run the executable on the host. We set GenerateTestingPlatformEntryPoint
+      and GenerateSelfRegisteredExtensions explicitly to still generate the required code.
+    -->
+    <EnableMSTestRunner>true</EnableMSTestRunner>
+    <GenerateTestingPlatformEntryPoint>true</GenerateTestingPlatformEntryPoint>
+    <GenerateSelfRegisteredExtensions>true</GenerateSelfRegisteredExtensions>
+    
+    <!-- Use MSTest Engine (source generation based) for device testing -->
+    <UseMSTestEngine>true</UseMSTestEngine>
+    <UseMSTestAdapter>false</UseMSTestAdapter>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Use source-generated MSTest for device testing (no PlatformServices dependency) -->
+    <PackageReference Include="MSTest.TestFramework" Version="$(MSTestVersion)" />
+    <PackageReference Include="MSTest.Analyzers" Version="$(MSTestVersion)" />
+    <PackageReference Include="Microsoft.Testing.Platform" Version="$(TestingPlatformVersion)" />
+    <PackageReference Include="Microsoft.Testing.Platform.MSBuild" Version="$(TestingPlatformVersion)" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="$(TestingPlatformVersion)" />
+    <PackageReference Include="MSTest.Engine" Version="$(MSTestAOTVersion)" />
+    <PackageReference Include="MSTest.SourceGeneration" Version="$(MSTestAOTVersion)" />
+  </ItemGroup>
+
+  <!-- Register custom device testing extensions -->
+  <ItemGroup>
+    <TestingPlatformBuilderHook Include="DeviceTestingExtensions">
+      <DisplayName>Device Testing Extensions</DisplayName>
+      <TypeFullName>BlankIOS.DeviceTestingPlatformBuilderHook</TypeFullName>
+    </TestingPlatformBuilderHook>
+  </ItemGroup>
+
+  <!-- 
+    Note: iOS Device Testing targets are imported via Directory.Build.targets
+    to ensure they override MTP's default behavior.
+  -->
 </Project>
